GUI showing correct results